# auth_db

./: .gitignore  Makefile  README.md  requirements.txt  schema.sql  setup.cfg
html/: forgot_password.html  index.html  login.html  login.js  signup.html  signup.js  styles.css  template_reset_password_non_inlined.html
src/auth_db/: app.py  db.py
src/auth_db/templates/: reset_password.html
