[metadata]
name = auth_db
version = 1.0.0
description = 'Example authentication server'

[options]
python_requires = >=3.10
package_dir =
  =src
packages = find_namespace:
include_package_data = true

install_requires =
    flask
    gunicorn
    flask-jwt-extended

[options.packages.find]
where = src
